--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
 </head>
 <body>
 
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
+  <% if current_user.present? %>
+    <%= "| Signed in as: #{current_user.email}" %>
+    <%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %>
+
+  <% else %>
+    <%= link_to "Sign In", "/users/sign_in" %>
+    <%= link_to "Sign Up", '/users/sign_up' %>
+
+  <% end %>
+
 <%= yield %>
 
 </body>
