--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <% if current_user.present? %>
     <%= "| Signed in as: #{current_user.email}" %>
+    <%= link_to "Projects", projects_path %>
     <%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %>
 
   <% else %>
